--- a/src/client/diary.fxml
+++ b/src/client/diary.fxml
@@ -18,128 +18,136 @@
 <?import javafx.scene.image.Image?>
 <?import timeline.frontend.TimelineView?>
 <?import timeline.frontend.TimelineFactory?>
+<?import com.jfoenix.controls.JFXTabPane?>
+<?import javafx.scene.layout.GridPane?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXTextField?>
+<?import com.jfoenix.controls.JFXTextArea?>
+<?import com.jfoenix.controls.JFXDatePicker?>
+<?import javafx.scene.layout.Region?>
+<?import javafx.scene.layout.AnchorPane?>
 <BorderPane styleClass="PaneStandardStyle" fx:id="diaryBorderPane" fx:controller="client.MainController" xmlns:fx="http://javafx.com/fxml" stylesheets="@main.css">
     <fx:define>
         <Screen fx:factory="getPrimary" fx:id="screen" />
     </fx:define>
 
     <top>
-        <VBox styleClass="MenuBar">
-            <HBox>
-                <MenuBar>
-                    <menus>
-                        <Menu text="Menu">
-                            <items>
-                                <MenuItem text="New Day" onAction="#cleanDiary" />
-                                <MenuItem text="Save your day" onAction="#saveDay" />
-                                <MenuItem text="Burn the diary" onAction="#burnDiary" />
-                                <MenuItem text="Exit" onAction="#exitDiary" />
-                            </items>
-                        </Menu>
-                    </menus>
-                </MenuBar>
-                <HBox style="-fx-background-color: #99B5BE;" HBox.hgrow="ALWAYS" />
-                <Button styleClass="MenuBarButtons" onAction="#minimizeWindow" text="-" />
-                <Button styleClass="MenuBarButtons" onAction="#exitDiary" text="x" />
-            </HBox>
+        <VBox styleClass="MenuBar" style="-fx-background-color: #b0bbc1">
+
         </VBox>
     </top>
     <center>
-        <TabPane styleClass="TabPane" tabClosingPolicy="UNAVAILABLE">
-            <tabs>
-                <Tab text="Diary" fx:id="diaryTab">
-                    <TimelineFactory fx:factory="instanceNoStyle" />
+        <AnchorPane>
+            <JFXTabPane styleClass="TabPane" tabClosingPolicy="UNAVAILABLE" style="-fx-background-color: #d0d6d9">
+                <Tab text="Menu">
+                    <VBox alignment="CENTER" spacing="5" style="-fx-padding: 5">
+                        <JFXButton styleClass="MenuButtons" text="New Day" onAction="#cleanDiary"  HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" maxWidth="Infinity" maxHeight="Infinity" />
+                        <JFXButton styleClass="MenuButtons" text="Save your day" onAction="#saveDay"  HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" maxWidth="Infinity" maxHeight="Infinity" />
+                        <JFXButton styleClass="MenuButtons" text="Burn the diary" onAction="#burnDiary"  HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" maxWidth="Infinity" maxHeight="Infinity" />
+                        <JFXButton styleClass="MenuButtons" text="Exit" onAction="#exitDiary" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" maxWidth="Infinity" maxHeight="Infinity" />
+                    </VBox>
                 </Tab>
-                <Tab text="Editor">
-                    <BorderPane styleClass="TabPaneContainer">
-                        <top>
+                <tabs>
+                    <Tab text="Diary" fx:id="diaryTab">
+                        <TimelineFactory fx:factory="instanceNoStyle" fx:id="timelineView" />
+                    </Tab>
+                    <Tab text="Editor">
+                        <BorderPane styleClass="TabPaneContainer" style="-fx-padding: 10px">
+                            <top>
 
-                        </top>
-                        <center>
-                            <VBox fx:id="editorContainer" spacing="5">
-                                <HBox spacing="5">
-                                    <TextField fx:id="dTitle" promptText="Title" HBox.hgrow="ALWAYS"></TextField>
-                                    <DatePicker fx:id="dPicker" promptText="Select Date" editable="false" HBox.hgrow="ALWAYS"></DatePicker>
-                                    <Button text="Load selected date" onAction="#loadDay" HBox.hgrow="ALWAYS"></Button>
-                                </HBox>
-                                <TextField fx:id="dCrucialExperience" promptText="Crucial Experience: What was it that made your day like this?" HBox.hgrow="ALWAYS"></TextField>
-                                <TextField fx:id="dPersonalExperience" promptText="Personal Experience: Did you experience any new feelings?" HBox.hgrow="ALWAYS"></TextField>
-                                <TextField fx:id="dKnowledgeObtained" promptText="Knowledge Obtained: What have you learned from this?" HBox.hgrow="ALWAYS"></TextField>
-                                <TextArea fx:id="dStoryOfTheDay" wrapText="true" promptText="Write the story of your day.." HBox.hgrow="ALWAYS"></TextArea>
-                            </VBox>
-                        </center>
-
-
-
-
-
-
-                        <right>
-                            <VBox spacing="5" style="-fx-padding: 5">
-
-                                <StackPane prefHeight="250" prefWidth="450" fx:id="imageContainerOne" styleClass="imageContainer" alignment="CENTER" onMouseClicked="#selectImageOne">
-                                    <Label>
-                                        <graphic>
-                                            <ImageView>
-                                                <Image url="@../resources/image-icon.png" />
-                                            </ImageView>
-                                        </graphic>
-                                    </Label>
-                                    <ImageView fx:id="imageViewOne" fitHeight="250" fitWidth="450" preserveRatio="true" />
-                                </StackPane>
-
-                                <VBox VBox.vgrow="ALWAYS" />
-
-                                <StackPane prefHeight="250" prefWidth="450" fx:id="imageContainerTwo" styleClass="imageContainer" alignment="CENTER" onMouseClicked="#selectImageTwo">
-                                    <Label>
-                                        <graphic>
-                                            <ImageView>
-                                                <Image url="@../resources/image-icon.png" />
-                                            </ImageView>
-                                        </graphic>
-                                    </Label>
-                                    <ImageView fx:id="imageViewTwo" fitHeight="250" fitWidth="450" preserveRatio="true" />
-                                </StackPane>
-
-                            </VBox>
-                        </right>
+                            </top>
+                            <center>
+                                <VBox fx:id="editorContainer" spacing="5">
+                                    <HBox spacing="5">
+                                        <JFXTextField fx:id="dTitle" promptText="Title" HBox.hgrow="ALWAYS" />
+                                        <JFXDatePicker fx:id="dPicker" promptText="Select Date" editable="false" HBox.hgrow="ALWAYS" />
+                                        <JFXButton text="Load selected date" onAction="#loadDay" HBox.hgrow="ALWAYS" />
+                                    </HBox>
+                                    <JFXTextField fx:id="dCrucialExperience" promptText="Crucial Experience: What was it that made your day like this?" HBox.hgrow="ALWAYS" />
+                                    <JFXTextField fx:id="dPersonalExperience" promptText="Personal Experience: Did you experience any new feelings?" HBox.hgrow="ALWAYS" />
+                                    <JFXTextField fx:id="dKnowledgeObtained" promptText="Knowledge Obtained: What have you learned from this?" HBox.hgrow="ALWAYS" />
+                                    <JFXTextArea fx:id="dStoryOfTheDay" wrapText="true" promptText="Write the story of your day.." HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" />
+                                </VBox>
+                            </center>
 
 
 
 
 
 
-                        <left>
-                            <VBox fx:id="tagPaneRoot" spacing="5" style="-fx-padding: 0 5 0 0">
-                                <HBox spacing="5">
-                                    <TextField fx:id="tagTextField" onKeyTyped="#validateInputOnTextField" promptText="TagTagTag" />
-                                </HBox>
-                                <VBox fx:id="tagsCollectionPane" spacing="5" style="-fx-border-width: 0; -fx-padding: 10">
+                            <right>
+                                <VBox spacing="5" style="-fx-padding: 5">
+
+                                    <StackPane prefHeight="250" prefWidth="450" fx:id="imageContainerOne" styleClass="imageContainer" alignment="CENTER" onMouseClicked="#selectImageOne">
+                                        <Label>
+                                            <graphic>
+                                                <ImageView>
+                                                    <Image url="@../resources/image-icon.png" />
+                                                </ImageView>
+                                            </graphic>
+                                        </Label>
+                                        <ImageView fx:id="imageViewOne" fitHeight="250" fitWidth="450" preserveRatio="true" />
+                                    </StackPane>
+
+                                    <VBox VBox.vgrow="ALWAYS" />
+
+                                    <StackPane prefHeight="250" prefWidth="450" fx:id="imageContainerTwo" styleClass="imageContainer" alignment="CENTER" onMouseClicked="#selectImageTwo">
+                                        <Label>
+                                            <graphic>
+                                                <ImageView>
+                                                    <Image url="@../resources/image-icon.png" />
+                                                </ImageView>
+                                            </graphic>
+                                        </Label>
+                                        <ImageView fx:id="imageViewTwo" fitHeight="250" fitWidth="450" preserveRatio="true" />
+                                    </StackPane>
 
                                 </VBox>
-                                <Label fx:id="enoughTagsLabel" />
-                                <VBox VBox.vgrow="ALWAYS" />
-                                <Label fx:id="tagWordCountLabel" />
-                            </VBox>
+                            </right>
 
-                        </left>
-                        <bottom>
-                            <HBox fx:id="bottomLayout" spacing="5">
-                                <Button fx:id="saveButton" text="Save your day" onAction="#saveDay" />
-                                <HBox HBox.hgrow="ALWAYS" />
-                                <Button styleClass="RateButton" text="1" fx:id="rb1" onAction="#setRating" onMouseClicked="#setRB1SelectColor" />
-                                <Button styleClass="RateButton" text="2" fx:id="rb2" onAction="#setRating" onMouseClicked="#setRB2SelectColor" />
-                                <Button styleClass="RateButton" text="3" fx:id="rb3" onAction="#setRating" onMouseClicked="#setRB3SelectColor" />
-                                <Button styleClass="RateButton" text="4" fx:id="rb4" onAction="#setRating" onMouseClicked="#setRB4SelectColor" />
-                                <Button styleClass="RateButton" text="5" fx:id="rb5" onAction="#setRating" onMouseClicked="#setRB5SelectColor" />
-                            </HBox>
-                        </bottom>
-                    </BorderPane>
-                </Tab>
-                <Tab fx:id="funcTab" text="Functionality">
-                    <fx:include source="functionality.fxml" />
-                </Tab>
-            </tabs>
-        </TabPane>
+
+
+
+
+
+                            <left>
+                                <VBox fx:id="tagPaneRoot" spacing="5" style="-fx-padding: 0 5 0 0">
+                                    <HBox spacing="5">
+                                        <JFXTextField fx:id="tagTextField" onKeyTyped="#validateInputOnTextField" promptText="TagTagTag" />
+                                    </HBox>
+                                    <VBox fx:id="tagsCollectionPane" spacing="5" style="-fx-border-width: 0; -fx-padding: 10">
+
+                                    </VBox>
+                                    <Label fx:id="enoughTagsLabel" />
+                                    <VBox VBox.vgrow="ALWAYS" />
+                                    <Label fx:id="tagWordCountLabel" />
+                                </VBox>
+
+                            </left>
+                            <bottom>
+                                <HBox fx:id="bottomLayout" spacing="5">
+                                    <JFXButton fx:id="saveButton" text="Save your day" onAction="#saveDay" />
+                                    <HBox HBox.hgrow="ALWAYS" />
+                                    <JFXButton styleClass="RateButton" text="1" fx:id="rb1" onAction="#setRating" onMouseClicked="#setRB1SelectColor" />
+                                    <JFXButton styleClass="RateButton" text="2" fx:id="rb2" onAction="#setRating" onMouseClicked="#setRB2SelectColor" />
+                                    <JFXButton styleClass="RateButton" text="3" fx:id="rb3" onAction="#setRating" onMouseClicked="#setRB3SelectColor" />
+                                    <JFXButton styleClass="RateButton" text="4" fx:id="rb4" onAction="#setRating" onMouseClicked="#setRB4SelectColor" />
+                                    <JFXButton styleClass="RateButton" text="5" fx:id="rb5" onAction="#setRating" onMouseClicked="#setRB5SelectColor" />
+                                </HBox>
+                            </bottom>
+                        </BorderPane>
+                    </Tab>
+                    <Tab fx:id="funcTab" text="Functionality">
+                        <fx:include source="functionality.fxml" />
+                    </Tab>
+
+
+                </tabs>
+            </JFXTabPane>
+            <HBox AnchorPane.rightAnchor="0">
+                <JFXButton styleClass="MenuBarButtons" onAction="#minimizeWindow" text="-" style="-fx-background-color: #536a74" />
+                <JFXButton styleClass="MenuBarButtons" onAction="#exitDiary" text="x" style="-fx-background-color: #536a74" />
+            </HBox>
+        </AnchorPane>
     </center>
 </BorderPane>
